src/objects/c2g__ReportingBalance__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpreportingbalance</customHelpPage>
    <description>Extract of the Budget and Balance information used for reporting purposes.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AdjustOperatingActivities__c</fullName>
        <label>Reclassify Profits</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BalanceUpdateTimestamp__c</fullName>
        <label>Balance Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BudgetAndBalance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget and Balance</label>
        <referenceTo>c2g__codaBudget__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowCategory__c</fullName>
        <label>Cash Flow Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CashFlowLineSummary__c</fullName>
        <label>Cash Flow Line Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualValue__c</fullName>
        <label>Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__HashCode__c</fullName>
        <label>Hash Code</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HomeValue__c</fullName>
        <label>Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__IntersectDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intersect Definition</label>
        <referenceTo>c2g__codaIntersectDefinition__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__NumberOfRelatedTransactionLineItems__c</fullName>
        <label>Number of Related Transaction Line Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Reporting Balances (Company)</relationshipLabel>
        <relationshipName>ReportingBalances2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodNumber__c</fullName>
        <formula>IF(ISNUMBER(c2g__Period__r.c2g__PeriodNumber__c),VALUE(c2g__Period__r.c2g__PeriodNumber__c),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Subanalysis__c</fullName>
        <formula>c2g__BankAccount__r.c2g__AccountName__c + c2g__Product__r.Name + c2g__TaxCode__r.Name + c2g__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-analysis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Reporting Balances</relationshipLabel>
        <relationshipName>ReportingBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HeadCountActual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HeadCountBudget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HeadCountForecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HeadCountPlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VolumeActual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VolumeBudget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VolumeForecast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VolumePlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharesInIssue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharesOutstanding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharesPrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow Exception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__YearNumber__c</fullName>
        <formula>IF(ISNUMBER(c2g__Period__r.c2g__YearName__r.Name),VALUE(c2g__Period__r.c2g__YearName__r.Name),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Reporting Balance</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_ReportingBalance</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_ReportingBalance</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_ReportingBalance</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Type__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__Product__c</columns>
        <columns>c2g__TaxCode__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>c2g__Dimension3__c</columns>
        <columns>c2g__Dimension4__c</columns>
        <columns>c2g__HomeValue__c</columns>
        <columns>c2g__DualValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reporting Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>